[package]
name = "sync_10000"
version = "0.1.0"
authors = ["Dmitry Mamchur <metaphysical.intoxication@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
data-encoding = "2.3.2"
ring = "0.16.19"
serde = {version = "1.0.123", features = ["derive"]}
bincode = "1.3.1"
walkdir = "2.3.1"